@@ -15,6 +15,8 @@ Version 1.1.0svn:
     * Fix problems receiving full commands on IMAP accounts (bug 2416).
     * Fix problems receiving full commands on POP3 accounts (bug 2013).
     * Fix removed new-mail folders sometimes re-adding themselves (bug 2647).
+    * Display message in log about possible incorrect username/password
+      when IMAP or POP3 authentication fails (bug 4344).
 
   Features:
     * Update the new message counts for all mailboxes on startup, rather than
